# rust-sdk

./: .gitignore  Cargo.toml  README.md  bundles.ts  package-lock.json  package.json  release.toml  tsconfig.json
.cargo-husky/hooks/: pre-commit
.github/workflows/: CI.yml
examples/: balance.rs  fund.rs  price.rs  upload.rs  verify_receipt.rs  withdraw.rs
res/: test_receipt.json  test_wallet.json
res/test_bundles/: algorand_sig  aptos_multisig  aptos_sig  arweave_sig  bnb_sig  chainlink_sig  ethereum_sig  matic_sig  near_sig  solana_sig  typedethereum_sig
src/: bundler.rs  bundlr.rs  consts.rs  currency.rs  deep_hash.rs  deep_hash_sync.rs  error.rs  index.rs  lib.rs  tags.rs  transaction.rs  upload.rs  utils.rs  wallet.rs
src/client/: balance.rs  fund.rs  method.rs  mod.rs  price.rs  upload.rs  withdraw.rs
src/currency/: arweave.rs  ethereum.rs  mod.rs  solana.rs
src/signers/: algorand.rs  aptos.rs  arweave.rs  cosmos.rs  ed25519.rs  erc20.rs  ethereum.rs  mod.rs  secp256k1.rs  signer.rs  solana.rs  typed_ethereum.rs
src/token/: arweave.rs  ethereum.rs  mod.rs  solana.rs
src/transaction/: bundlr.rs  irys.rs  mod.rs  poll.rs
src/utils/: mod.rs
src/utils/eip712/: encode.rs  error.rs  lexer.rs  mod.rs  parser.rs
src/verify/: file.rs  mod.rs  stream.rs  types.rs
src/verify/test_bundles/: arbitrum_sig  avalanche_sig  boba-eth_sig  cosmos_sig  ethereum_sig  kyve_sig
