[package]
name = "bundlr-sdk"
description = "Bundlr Network Rust sdk"
homepage = "https://bundlr.network"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/Bundlr-Network/rust-sdk"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.52"
async-recursion = "0.3.2"
async-stream = "0.3.2"
avro-rs = "0.13.0"
bs58 = "0.4.0"
bytes = "1.1.0"
data-encoding = "2.3.2"
derive_builder = "0.10.2"
derive_more = "0.99.17"
ed25519-dalek = { version = "1.0.1", optional = true }
futures = "0.3.19"
jsonwebkey = { version = "0.3.4", optional = true, features = [ "pkcs-convert" ] }
lazy_static = "1.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
pipe = "0.4.0"
primitive-types = "0.11.1"
rand = "0.8.5"
reqwest = "0.11.11"
ring = "0.16.20"
rsa = { version = "0.6.1", optional = true }
secp256k1 = { version = "0.22.1", optional = true, features = [ "recovery" ] }
serde = "1.0.132"
serde_json = "1.0.73"
sha2 = "0.10.2"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = [ "fs" ]}
tokio-util = "0.6.9"
web3 = { version = "0.18.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[features]
default = ["solana", "ethereum", "erc20", "cosmos", "arweave"]
arweave = ["rsa", "jsonwebkey"]
cosmos = ["secp256k1"]
erc20 = ["secp256k1", "web3"]
ethereum = ["secp256k1", "web3"]
solana = ["ed25519-dalek"]
